--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -93,7 +93,9 @@ jobs:
     - name: Install Python dependencies
       run: python -m pip install --upgrade tox codecov
     - name: Run tests
-      run: tox ${{ matrix.toxargs }} -e ${{ matrix.toxenv }} -- ${{ matrix.toxposargs }}
+      run: |
+        ls .
+        tox ${{ matrix.toxargs }} -e ${{ matrix.toxenv }} -- ${{ matrix.toxposargs }}
     - name: Upload coverage to codecov
       if: ${{ contains(matrix.toxenv,'-cov') }}
       uses: codecov/codecov-action@v2
@@ -109,7 +111,7 @@ jobs:
       upload_to_pypi: false
       upload_to_anaconda: false
       test_extras: test
-      test_command: ls $GITHUB_WORKSPACE; pytest $GITHUB_WORKSPACE/tests $GITHUB_WORKSPACE/docs
+      test_command: pytest $GITHUB_WORKSPACE/tests $GITHUB_WORKSPACE/docs
 
   test_wheel_building:
     # This ensures that a couple of targets work fine in pull requests and pushes
@@ -125,17 +127,6 @@ jobs:
         include:
           - os: ubuntu-latest
             name: linux-x86_64
-          - os: windows-2019
-            name: windows-amd64
-          - os: macos-11
-            name: macos-x86_64
-            macos_arch: "x86_64"
-          - os: macos-11
-            name: macos-arm64
-            macos_arch: "arm64"
-          - os: macos-11
-            name: macos-universal2
-            macos_arch: "universal2"
 
     steps:
       - uses: actions/checkout@v3
