--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,11 +55,6 @@ repos:
         args:
           - --py38-plus
 
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.2.0
-    hooks:
-    -   id: setup-cfg-fmt
-
   - repo: https://github.com/pycqa/isort
     rev: 5.11.4
     hooks:
@@ -79,6 +74,13 @@ repos:
       - id: black-jupyter
         additional_dependencies: [toml]
 
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: "v0.0.158"
+    hooks:
+      - id: ruff
+        args:
+          - --fix
+
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.6.0
     hooks:
@@ -89,16 +91,12 @@ repos:
         args: [--py38-plus]
       - id: nbqa-isort
 
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
+  - repo: https://github.com/pycqa/pydocstyle
+    rev: 6.1.1
     hooks:
-      - id: flake8
+      - id: pydocstyle
         args:
-        - --min-python-version=3.8
-        additional_dependencies:
-        - flake8-type-checking
-        - flake8-typing-imports==1.13.0
-        - flake8-comprehensions
+        - --match='(?!test_).*\.py'
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.991'
@@ -108,3 +106,8 @@ repos:
         - --strict
         - --ignore-missing-imports
         - --exclude=/docs/
+
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.1
+    hooks:
+      - id: codespell
