--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py{38,39,310}-test{,-image,-alldeps,-oldestdeps,-devdeps}{,-cov}{,-clocale}
-    py{38,39,310}-test-numpy{118,119,120,121}
+    py{38,39,310,311}-test{,-image,-alldeps,-oldestdeps,-devdeps}{,-cov}{,-clocale}
+    py{38,39,310,311}-test-numpy{118,119,120,121,122,123}
     build_docs
     linkcheck
     codestyle
@@ -45,6 +45,7 @@ description =
     numpy120: with numpy 1.20.*
     numpy121: with numpy 1.21.*
     numpy122: with numpy 1.22.*
+    numpy123: with numpy 1.23.*
 
 # The following provides some specific pinnings for key packages
 deps =
@@ -53,6 +54,7 @@ deps =
     numpy120: numpy==1.20.*
     numpy121: numpy==1.21.*
     numpy122: numpy==1.22.*
+    numpy123: numpy==1.23.*
 
     # The oldestdeps factor is intended to be used to install the oldest
     # versions of all dependencies that have a minimum version.
@@ -105,6 +107,7 @@ commands =
 max-line-length = 120
 ignore = E203, W503
 doctests = True
+docstring-convention = numpy
 
 
 [pytest]
@@ -123,3 +126,5 @@ filterwarnings =
     ignore:The config value
     # distutils
     ignore:distutils Version classes are deprecated\.
+doctest_subpackage_requires =
+    overload_numpy/overload.py = python>=3.10
