--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,12 +110,6 @@
   before-build = ["pip install -r .github/mypyc-requirements.txt"]
 
 
-[tool.autopep8]
-  max_line_length = 120
-  in-place = true
-  recursive = true
-
-
 [tool.black]
   line-length = 120
   include = '\.pyi?$'
@@ -193,3 +187,21 @@
   [[tool.mypy.overrides]]
     module = "tests/*"
     ignore_errors = true
+
+
+[tool.ruff]
+  line-length = 120
+  select = ["ALL"]
+  ignore = [
+    "ANN101", "ANN102", "ANN401",
+    "ARG001", "ARG002",
+    "D105", "D107", "D203", "D213",
+    "FBT003",
+    "I001",
+    "PD",
+    "RET505", "RET506", "RET507",
+  ]
+  target-version = "py310"
+
+[tool.ruff.per-file-ignores]
+  "test_*" = ["ANN", "D100", "D103", "N8", "S101"]
