--- a/pyproject.toml
+++ b/pyproject.toml
@@ -156,19 +156,6 @@
   ]
 
 
-[tool.isort]
-  profile = "black"
-  include_trailing_comma = "True"
-  use_parentheses = "True"
-  ensure_newline_before_comments = "True"
-  known_localfolder = "override_toformat"
-  known_third_party = ["numpy", "pytest"]
-  import_heading_stdlib = "STDLIB"
-  import_heading_firstparty = "FIRSTPARTY"
-  import_heading_thirdparty = "THIRDPARTY"
-  import_heading_localfolder = "LOCAL"
-
-
 [tool.mypy]
   disallow_untyped_defs = true
   ignore_missing_imports = true
@@ -190,6 +177,7 @@
 
 
 [tool.ruff]
+  target-version = "py38"
   line-length = 120
   select = ["ALL"]
   ignore = [
@@ -197,11 +185,10 @@
     "ARG001", "ARG002",
     "D105", "D107", "D203", "D213",
     "FBT003",
-    "I001",
     "PD",
     "RET505", "RET506", "RET507",
   ]
-  target-version = "py310"
 
 [tool.ruff.per-file-ignores]
   "test_*" = ["ANN", "D100", "D103", "N8", "S101"]
+  "docs/*.py" = ["INP001"]
