--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
   name = "override_toformat"
   version = "0.0.1"
-  description = "Overload NumPy Functions"
+  description = "Add easy object interchange"
   readme = "README.rst"
   requires-python = ">=3.8"
   license = {file = "LICENSE"}
-  keywords = ["numpy", "interoperability"]
+  keywords = ["interoperability"]
   authors = [
     {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"}
   ]
@@ -21,7 +21,6 @@
   ]
   dependencies = [
     "mypy_extensions>=0.4.3",
-    "numpy",
   ]
 
 [project.optional-dependencies]
@@ -111,12 +110,6 @@
   before-build = ["pip install -r .github/mypyc-requirements.txt"]
 
 
-[tool.autopep8]
-  max_line_length = 120
-  in-place = true
-  recursive = true
-
-
 [tool.black]
   line-length = 120
   include = '\.pyi?$'
@@ -155,24 +148,12 @@
     "if __name__ == .__main__.:",
     # Don't complain about abstract methods, they aren't run:
     '@(abc\.)?abstractmethod',
-    # Exclude type check blocks
+    # Exclude type check blocks and Protocol contents, they aren't run:
     "if TYPE_CHECKING:",
+    '\.\.\.',
     # Don't complain about IPython completion helper
     "def _ipython_key_completions_",
   ]
-
-
-[tool.isort]
-  profile = "black"
-  include_trailing_comma = "True"
-  use_parentheses = "True"
-  ensure_newline_before_comments = "True"
-  known_localfolder = "override_toformat"
-  known_third_party = ["numpy", "pytest"]
-  import_heading_stdlib = "STDLIB"
-  import_heading_firstparty = "FIRSTPARTY"
-  import_heading_thirdparty = "THIRDPARTY"
-  import_heading_localfolder = "LOCAL"
 
 
 [tool.mypy]
@@ -193,3 +174,21 @@
   [[tool.mypy.overrides]]
     module = "tests/*"
     ignore_errors = true
+
+
+[tool.ruff]
+  target-version = "py38"
+  line-length = 120
+  select = ["ALL"]
+  ignore = [
+    "ANN101", "ANN102", "ANN401",
+    "ARG001", "ARG002",
+    "D105", "D107", "D203", "D213",
+    "FBT003",
+    "PD",
+    "RET505", "RET506", "RET507",
+  ]
+
+[tool.ruff.per-file-ignores]
+  "test_*" = ["ANN", "D100", "D103", "N8", "S101"]
+  "docs/*.py" = ["INP001"]
